# stm32-signal-generator-meter

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/: README.md
config/: STM32F429IGTX_FLASH.ld
docs/: README.md  architecture.md  decision-log.md  demo-script.md  error-analysis.md  lcd-integration-notes.md  pin-plan.md  roadmap.md  verification-log.md
docs/archive/: README.md
include/: README.md  app.h  board_config.h  display.h  main.h  signal_gen_logic.h  signal_measure.h  signal_measure_logic.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  ui_cmd.h
include/app/: app.h
include/board/: board_config.h
include/display/: display.h  display_backend.h  display_lcd_hw.h  display_lcd_scene.h  display_lcd_scope.h  display_lcd_xy.h  display_lcd_xy_logic.h  lcd_font.h  lcd_prim.h
include/scope/: scope_render_logic.h
include/signal_capture/: signal_capture_adc.h  signal_capture_adc_logic.h
include/signal_gen/: signal_gen.h  signal_gen_dac.h  signal_gen_dac_logic.h  signal_gen_logic.h
include/signal_measure/: signal_measure.h  signal_measure_logic.h
include/touch/: touch.h
include/ui/: ui_actions.h  ui_cmd.h  ui_ctrl.h  ui_touch_map.h
src/: README.md  app.c  display.c  main.c  signal_gen.c  signal_gen_logic.c  signal_measure.c  signal_measure_logic.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  ui_cmd.c  ui_ctrl.c
src/app/: app.c
src/board/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/display/: display.c  display_backend.h  display_lcd.c  display_lcd_hw.c  display_lcd_scene.c  display_lcd_scope.c  display_lcd_xy.c  display_lcd_xy_logic.c  display_uart.c  lcd_font.c  lcd_prim.c
src/scope/: scope_render_logic.c
src/signal_capture/: signal_capture_adc.c  signal_capture_adc_logic.c
src/signal_gen/: signal_gen.c  signal_gen_dac.c  signal_gen_dac_logic.c  signal_gen_logic.c
src/signal_measure/: signal_measure.c  signal_measure_logic.c
src/system/: main.c  syscalls.c  system_stm32f4xx.c
src/touch/: touch.c
src/ui/: ui_actions.c  ui_cmd.c  ui_ctrl.c  ui_touch_map.c
tests/: CMakeLists.txt  README.md  hal_stubs.h  run_host_tests.sh  test_display_lcd_xy_logic.c  test_scope_render_logic.c  test_signal_capture_adc_logic.c  test_signal_gen_dac_logic.c  test_signal_gen_logic.c  test_signal_measure_logic.c  test_ui_cmd.c  test_ui_ctrl_compile_stubs.c
tools/: README.md  env-check.sh  serial_monitor.py
